# experiments

berries/: pyproject.toml
grpc-gateway-test-project/: Makefile  README.md
grpc-gateway-test-project/cmd/example-service/: main.go
grpc-gateway-test-project/cmd/example-service-all-in-one/: main.go
grpc-gateway-test-project/cmd/example-service-gateway-server/: main.go
grpc-gateway-test-project/cmd/star-wars-service-all-in-one/: main.go
grpc-gateway-test-project/cmd/star-wars-service-client/: main.go
grpc-gateway-test-project/docs/proto/: example_service.swagger.json  starwars_service.swagger.json
grpc-gateway-test-project/pkg/example/: example.go
grpc-gateway-test-project/pkg/example_service/: example_service_grpc_server.go
grpc-gateway-test-project/pkg/example_service/proto/: example_service.pb.go  example_service.pb.gw.go
grpc-gateway-test-project/pkg/starwars/: starwars.go
grpc-gateway-test-project/pkg/starwars/proto/: starwars_service.pb.go  starwars_service.pb.gw.go
grpc-gateway-test-project/proto/: starwars_service.proto
