[tool.poetry]
name = "berries"
version = "0.1.0"
description = ""
authors = ["William Stewart <zoidbergwill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
strawberry-graphql = "^0.16.5"
redis = "^3.3"
promise = "^2.2"
graphene-tornado = "^2.5"
opencensus = "^0.7.5"

[tool.poetry.dev-dependencies]
ipython = "^7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
